# mgroms

./: .gitignore  INSTALL  Makefile.in  README.md  README_CAPARMOR  README_OPENMPI  README_ada  README_autotools  README_caparmor  README_curie  README_ubo  assumptions  config.status  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
examples/: Makefile.am  Makefile.in
examples/curie/: Makefile.am  Makefile.in  README_advisor  job_curie_mpi.slurm
examples/idris_ada/: Makefile.am  Makefile.in  run_testcuc.ll  run_testseamount.ll
examples/namelist/: Makefile.am  Makefile.in  nh_namelist
examples/perf_caparmor/: Makefile.am  Makefile.in  namelist_ref  nh_perf_1.sh  nh_perf_2.sh  run_16p.pbs  run_256p.pbs  run_4p.pbs  run_64p.pbs
matlab/: check.m  check_real_matrix.m  check_real_relaxation.m  set_nhlap_GR_ND.m  set_nhlap_JM_ND.m  set_nhlap_ND.m  solve_pressure_GR_ND.m  solve_pressure_JM_ND.m  solve_pressure_ND.m
matlab/solve2D_gr/: check_real_matrix.m  check_real_matrix_2.m  check_real_relaxation.m  conv_rate_ke.m  enforce_divergence_free_ND.m  enforce_divergencefree.m  enforce_divergencefree_ND.m  flux2div.m  integrated_ke.m  momentum2flux.m  momentum2real.m  real2momentum.m  set_nhlap.m  set_nhlap_ND.m  solve_pressure_ND.m  zlevs.m  zlevs_ND.m
matlab/solve2D_jm/: Opers.m  check.m  coeff_vol.m  makeD.m  makeTm.m
src/: Makefile  Makefile.am  Makefile.in  main_model.f90  main_model_mpi.f90  mg_compute_rhs.f90  mg_correct_uvw.f90  mg_cuc.f90  mg_define_matrix.f90  mg_define_matrix_Future.f90  mg_define_matrix_V1.f90  mg_define_matrix_v2.f90  mg_define_rhs.f90  mg_gather.f90  mg_grids.F  mg_grids.f90  mg_halo.f90  mg_intergrids.f90  mg_intergrids_old.f90  mg_interpolation.f90  mg_main.F  mg_mpi.F  mg_mpi.f90  mg_mpi_exchange.f90  mg_mpi_exchange_ijk.f90  mg_namelist.f90  mg_netcdf_in.f90  mg_netcdf_out.f90  mg_oldgrids.f90  mg_optimized.F  mg_optimized.f90  mg_relax.f90  mg_relax_line.f90  mg_restrict.f90  mg_s_coord.f90  mg_seamount.f90  mg_setup_tests.f90  mg_simpleope.F  mg_smoother.F  mg_solvers.f90  (+19 more)
src/old_tests/: main_model.f90  mg_testcoarsening.f90  mg_testgather.f90  mg_testhalo.f90  mg_testintergrids.f90  mg_testnetcdf.f90  mg_testrelax.f90
